working with ngrx, lazy loading, rxjs, dep inj

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,33 @@
      Every toolbar row uses a flexbox row layout. */
   flex: 1 1 auto;
 }
+
+.example-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.example-events {
+  width: 300px;
+  height: 200px;
+  overflow: auto;
+  border: 1px solid #555;
+}
+
+span.nav-item>a.nav-link {
+  text-decoration: none;
+  color: white !important;
+  font-size: 1.25rem;
+  margin: 10px;
+}
+
+section.content-wrapper {
+  margin: 4em;
+}
+
+a.nav-link:active {
+  color: black;
+}
