--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -1,7 +1,7 @@
-<button (click)="increment()">Increment</button>
-
+<button mat-raised-button color="primary" (click)="increment()">Increment</button>
+<br />
 <div>Current Count: {{ count$ | async }}</div>
+<br />
+<button mat-raised-button color="accent" (click)="decrement()">Decrement</button>
 
-<button (click)="decrement()">Decrement</button>
-
-<button (click)="reset()">Reset Counter</button>
+<button mat-raised-button color="warn" (click)="reset()">Reset Counter</button>
